fixed composer.json and directory structure to match Composer name requirements

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dogeapi-php",
+    "name": "dogeapi-php/dogeapi-php",
     "description": "dogeapi-php API library",
     "keywords": ["dogecoin", "dogeapi"],
     "homepage": "https://dogeapi.com",
