more fixes to composer.json to be consistent with other repos

--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
     "name": "dogeapi-php/dogeapi-php",
+    "license": "MIT",
     "description": "dogeapi-php API library",
     "keywords": ["dogecoin", "dogeapi"],
     "homepage": "https://dogeapi.com",
     "type": "library",
     "autoload": {
-        "psr-0": {"DogeAPI": "dogeapi-php/"}
+        "psr-0": {"DogeAPI": "lib/"}
     },
     "require": {
         "php": ">=5.2.0"
